test/Fail/UnquoteDeclHelperNotDefined.err
UnquoteDeclHelperNotDefined.agda:9,1-13,47: error: [GenericError]
Missing definition for UnquoteDeclHelperNotDefined.aux
